Fix navbar overlap and center work heading

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,8 +1,9 @@
 .header {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
   max-width: var(--cMaxWidth);
   width: var(--cWidth);
-  justify-content: space-between;
   padding: 20px 0px;
   margin-bottom: -100px;
   box-sizing: border-box;
@@ -31,14 +32,14 @@
   cursor: pointer;
 }
 .navbar-connect {
-  position: absolute;
+  position: static;
   display: none;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  justify-self: center;
+  text-align: center;
   font-size: 15px;
   letter-spacing: 1px;
   font-weight: 500;
+  white-space: nowrap;
 }
 .navbar-title {
   font-weight: 700;
@@ -72,7 +73,7 @@
     padding: 35px 0px;
   }
   .header ul {
-    column-gap: 80px;
+    column-gap: 48px;
     font-size: 16px;
   }
   .navbar-connect {
@@ -80,6 +81,11 @@
   }
   .navbar-title {
     font-size: 18px;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .header ul {
+    column-gap: 72px;
   }
 }
 @media only screen and (min-width: 1400px) {
